# technosig-lab

./: .gitignore  CITATION.cff  LICENSE  LIMITATIONS.md  README.md  examples.md  known_signals_catalog.json  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
docs/: CANDIDATE_GATES.md  DATA.md  METHOD.md
examples/: hip194_candidate_evidence.example.json  known_signals_catalog.example.json  voyager_positive_control.example.json
scripts/: README.md  fetch_bldr1_sband_index.ps1  fetch_voyager_positive_control.ps1  run_hip194_vetting.ps1  run_voyager_positive_control.ps1
technosig_lab/: __init__.py  backgrounds.py  blio.py  candidate_vetting.py  cli.py  detectors.py  injection.py  jsonl.py  metrics.py  models.py  peaks.py  plots.py  signals.py  spectrogram.py  thresholds.py  validation.py
tests/: test_repo_hygiene.py  test_smoke.py
